app/assets/stylesheets/home.css.scss
/* ... */
section#about-us p{
	/*font: 18px 'Droid Serif', serif;
	color: #b2b2b2;
	margin: 30px 0px;*/
}

#about-stats{
	background: #1588c3;
	position: relative;
	
	a{
    .techlunch{
      position: relative;
      z-index: 5000;
    }
	}
}

#about-us-arrow{
	width: 221px;
	height: 88px;
	position: absolute;	
	bottom: -50px;
	left: -111px;
	margin-left:50%;
	background: image-url("about-arrow.png") no-repeat;
	z-index: -1;
}

#about-stats ul{
	list-style: none;
}
#about-stats ul.team li:first-child{
	background: none;
}
#about-stats ul.team li{
	width: 320px;
	float: left;
	color: #004264;
	margin-top: 27px;
	background: image-url("menu-border.png") left 0px repeat-y;
}

#about-stats ul.team li.coffee{
	width: 310px;
}

#about-stats ul.team li.tracks{
	width: 333px;
	a.html:link {
    COLOR: #0B0B3B;
  }
  a.html:visited {
    text-decoration: none;
    COLOR: #0B0B3B;
  }
  a.html:hover {
    text-decoration: none;
    COLOR: #000000;
  }
  a.html:active {
    COLOR: #000000;
  }
}

#about-stats ul.team li.food{
	width: 317px;
}


#about-stats ul.team li h3{
	font: bold 14px 'Droid Sans', sans-serif;
	text-transform: uppercase;
}

#about-stats ul.team li h2{
	font: bold 48px/46px 'Droid Sans', sans-serif;
}

#about-stats ul.team li p{
	font: 12px 'Droid Serif', serif;
	color: #004264;
	margin: 0;
}

#about-stats ul.team li p a{
	text-decoration: none;
}

#about-stats ul.team li p a:hover{
	text-decoration: underline;
}

#about-stats ul.team li img{
	float: left;
	margin: 0px 25px;
}

#about-stats ul.social li{
	float: left;
	color: #004264;
	margin: 60px 0px 40px;
	padding: 0px 11px;
	background: image-url("menu-border.png") left 0px repeat-y;
}

#about-stats ul.social li.git{
  position: relative;
  left: 15px;
	width: 185px;
}

#about-stats ul.social li.rails{
	width: 140px;
}

#about-stats ul.social li.tweets{
	width: 100px;
}

#about-stats ul.social li.blog{
	width: 154px;
}

#about-stats ul.social li.lunch{
	width: 135px;
}

#about-stats ul.social li.lunch h3 a{
	float: right;
}
#about-stats ul.social li.ideas{
	width: 140px;
}


#about-stats ul.social li:first-child{
	background: none;
}
#about-stats ul.social li h3{
	font: bold 12px 'Droid Sans', sans-serif;
	text-transform: uppercase;
	margin-bottom: 13px;
}

#about-stats ul.social li h2{
	font: bold 30px 'Droid Sans', sans-serif;
}

section#team{
	margin-top: 0px;
	position: relative;
	top: 100px;
	overflow:hidden;
}

section#team ul{
	list-style: none;
}

@media screen and (max-width: 500px) {
  #team ul li {
  width:100%;
  /* margin-left:auto !important;
  margin-right:auto !important; */
  text-align:center;
  margin:0px !important;
  }
  #team ul li a {
  margin:auto !important;
  overflow:hidden !important;
  display:inline-block !important;
  }
  #team ul li {
  height:271px;
  }
}

section#team ul li{
	float: left;
	margin-left: 30px;
	margin-right: 30px;
	margin-bottom: 60px;
}

section#team ul li.right{
  margin-right: 0px;
}

section#team ul li.last{
	margin-right: 0px;
}


#team ul li a {
	width: 189px;
  height:189px;
	font: bold 14px 'PT Sans', sans-serif;
	text-align: center;
	color: #FFF;
	position:relative;
		.portrait{
	  position: absolute;
	  /*left: 0px;
	  top: 0px;*/
	  width: 180px;
	  height: 180px;
	  border-radius: 90px;
	  border:solid 6px #ffffff;

	  -webkit-transition: all 0.3s ease-out;  /* Safari 3.2+, Chrome */
     -moz-transition: all 0.3s ease-out;  /* Firefox 4-15 */
       -o-transition: all 0.3s ease-out;  /* Opera 10.5–12.00 */
          transition: all 0.3s ease-out;  /* Firefox 16+, Opera 12.50+ */

	}
	&:hover {
		p {
		color: #1588c3;		
		}
		.portrait {
		border:solid 6px #1588c3;
		}
	}
	p {
  text-decoration: none;
	text-transform: uppercase;
	font: bold 14px 'PT Sans', sans-serif;
	text-align: center;
	color: #FFF;
	-webkit-transition: all 0.3s ease-out;  /* Safari 3.2+, Chrome */
     -moz-transition: all 0.3s ease-out;  /* Firefox 4-15 */
       -o-transition: all 0.3s ease-out;  /* Opera 10.5–12.00 */
          transition: all 0.3s ease-out;  /* Firefox 16+, Opera 12.50+ */
	}
	
	
}
/*
section#team ul li a{
	display: block;
	padding-top: 209px;
	text-align: center;
	width: 189px;
	font: bold 14px 'PT Sans', sans-serif;
	color: #FFF;
	text-decoration: none;
	text-transform: uppercase;
  .new{
    margin-top: -207px;
  }
	.portrait{
	  position: relative;
	  margin-top: -400px;
	  left: -2px;
	  top: 190px;
	  width: 180px;
	  height: 180px;
	  border-radius: 90px;
	  border:solid 6px #ffffff;
	}
}


section#team ul li a:hover{
	color: #1588c3;
  .new{
    margin-top: -207px;
  }
	.portrait{
	  position: relative;
	  margin-top: -400px;
	  top: 190px;
	  left: -2px;
	  width: 180px;
	  height: 180px;
	  border-radius: 90px;
	  border:solid 6px #1588c3;
	}
}

*/

section#testimonials{
	margin: 120px auto 0px;
	    h2 {
      font: bold 18px 'PT Sans', sans-serif;
      color: white;
      text-transform: uppercase;
      margin: 25px 0px;
      float: left;
      padding: 5px 0px 5px 48px;
      background: image-url("quote.png") 0px 0px no-repeat;
    }

}
section#testimonials header{
	border-top: 2px solid #1588c3;
	background: image-url("projects-border.png") 0px bottom repeat-x;
	height: 78px;
}

section#testimonials header h3{
	font: bold 18px 'PT Sans', sans-serif;
	color: #FFF;
	padding-left: 50px;
	background: image-url("quote.png") no-repeat scroll 0 26px transparent;
	text-transform: uppercase;
	line-height: 78px;
	float: left;
}

a.test-nav{
	display: block;
	width: 35px;
	height: 35px;
	float: right;
	margin-top: 24px;
}

a.test-nav.prev{
	background: image-url("testimonial-prev.png") no-repeat;
	margin-right: 5px;	
}

a.test-nav.next{
	background: image-url("testimonial-next.png") no-repeat;
}

a.test-nav:hover{
	background-position: 0px -35px;
}
/* ... */

